GNOME Bugzilla – Bug 316026
Objects Snap Wrong on Right-to-Left Sheets
Last modified: 2005-09-14 03:28:02 UTC
Distribution/Version: Gnome 2.12 LiveCD 1. Open a new sheet and set it to be right-to-left 2. Insert any object (image, chart, ...) 3. Move the object with the shift key pressed. This does snap the object to cells, but even though the sheet it RTL, objects snap on their left side.
I don't understand. The objects snap to the nearest grid point. There's no left vs right preference. Can you give me a detailed example ideally with a sample file.
Created attachment 52164 [details] Example of The Image Snapping Problem I've attached an example. Try moving it aroung using the Shift key. Notice that the image only snaps with it's left side (of the image, not the cell), so it can't snap to the right side of a cell.
ahh, I see. patched in CVS for 1.6.0