http://bugzilla.gnome.org/show_bug.cgi?id=316026 type 8 movement (sliding

2005-09-13  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=316026
	* src/sheet-control-gui.c (drag_object) : type 8 movement (sliding
	  full object) in rtl mode should snap coord 2, the right side.